[package]
name = "petrovich"
version = "0.2.0"
authors = ["latrasis <jacobapayne@gmail.com>","road21 <amtroitskiy@gmail.com>"]
repository = "https://github.com/Latrasis/petrovich-rs"
readme = "README.md"
keywords = ["petrovich", "russian", "inflection"]
description = "Petrovich is library which inflects Russian names to given grammatical case. It supports first names, last names and middle names inflections."
license = "MIT"
edition = "2018"

[dependencies]
yaml-rust = "0.4.3"
